--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - id: foo
-        uses: action-personnalise-workflows/actions@v1
+        uses: ./action-personnalise-workflows/actions@v1
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
