--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -6,8 +6,8 @@ jobs:
     name: A job to say hello
     steps:
       - uses: actions/checkout@v4
-      - id: foo
-        uses: ./action-personnalise-workflows/actions@v1
+      - name: Run Custom Action
+        uses: ./action-personnalise-workflows/actions
         with:
           who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
