add workflows syntax

--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -1,14 +1,22 @@
-on: [push]
-
+on:
+    push:
+      branches:
+        - main
 jobs:
-  hello_world_job:
-    runs-on: ubuntu-latest
-    name: A job to say hello
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run Custom Action
-        uses: action-personnalise-workflows/actions
-        with:
-          who-to-greet: 'Mona the Octocat'
-      - run: echo random-number ${{ steps.foo.outputs.random-number }}
-        shell: bash
+    hello_world_job:
+      runs-on: ubuntu-latest
+      name: A job to say hello
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+  
+        - name: Run Custom Action
+          id: foo
+          uses: ./action-personnalise-workflows/actions
+          with:
+            who-to-greet: 'Mona the Octocat'
+  
+        - name: Display Random Number
+          run: echo "random-number ${{ steps.foo.outputs.random-number }}"
+          shell: bash
+  
