--- a/actions/action.yml
+++ b/actions/action.yml
@@ -1,23 +1,11 @@
-```yaml copy
 name: 'Hello World'
 description: 'Greet someone'
 inputs:
-  who-to-greet:  # id of input
+  who-to-greet:
     description: 'Who to greet'
     required: true
     default: 'World'
-outputs:
-  random-number:
-    description: "Random number"
-    value: ${{ steps.random-number-generator.outputs.random-number }}
-    runs:
+runs:
   using: "composite"
   steps:
-    - run: echo Hello ,  ${{ inputs.who-to-greet }}.
-      shell: bash
-    - id: random-number-generator
-      run: echo "random-number=$(echo $RANDOM)" >> $GITHUB_OUTPUT
-      shell: bash
-    - run: goodbye.sh
-      shell: bash
-```
+    - run: echo Hello ${{ inputs.who-to-greet }}.
