--- a/actions/action.yml
+++ b/actions/action.yml
@@ -1,11 +1,7 @@
 name: 'Hello World'
 description: 'Greet someone'
-inputs:
-  who-to-greet:
-    description: 'Who to greet'
-    required: true
-    default: 'World'
 runs:
   using: "composite"
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
+      shell: bash
