--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -8,8 +8,11 @@ jobs:
       name: A job to say hello
       steps:
         - name: Checkout repository
-          uses: actions/checkout@v2
-  
+          uses: actions/checkout@v4
+
+        - name: Build and Push Docker Image
+          run: docker build -t action-personnalise-workflows ./action-personnalise-workflows
+
         - name: Run Custom Action
           uses: ./actions
           with:
