--- a/app/actions/action.yml
+++ b/app/actions/action.yml
@@ -3,5 +3,5 @@ description: 'Greet someone'
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ inputs.who-to-greet }}.
+    - run: echo Helloooooo ${{ inputs.who-to-greet }}.
       shell: bash
