--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -14,7 +14,7 @@ jobs:
           run: docker build -t action-personnalise-workflows ./action-personnalise-workflows
 
         - name: Run Custom Action
-          uses: ./app/actions
+          uses: ./action.yml
           with:
             who-to-greet: 'Mona the Octocat'
   
