--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -32,7 +32,7 @@ jobs:
         - name: Build and Push Docker Image
           uses: docker/build-push-action@v5
           with:
-            context: .
+            context: ./action-personnalise-workflows
             push: true
             tags: |
                 ghcr.io/katarzyna-da-silva/action-personnalise-workflows:latest
