--- a/.github/workflows/sayHello.yml
+++ b/.github/workflows/sayHello.yml
@@ -11,7 +11,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Build and Push Docker Image
-          run: docker build -t action-personnalise-workflows ./action-personnalise-workflows
+          run: docker build -t .
 
         - name: Run Custom Action
           uses: ./action.yml
